<resources>
    <string name="app_name">BookLove-Android</string>
    <string name="app_title">BOOK Love</string>
    <string name="app_title_ko">부끄럽</string>

<!--    밑줄 있는 형태의 회원가입 -->
    <string name="signUp_u"><u>회원가입</u></string>

    <string name="kakao_native_key">d4e7ef1673fec6a777393689a82748d7</string>
    <string name="kakao_manifest_key">kakaod4e7ef1673fec6a777393689a82748d7</string>
    <string name="signUp">회원가입</string>
    <string name="logIn">로그인</string>
    <string name="socialLogIn">소셜 로그인</string>
    <string name="findTaste">나의 취향 찾기</string>
    <string name="guide_gender">성별을 선택해주세요</string>
    <string name="guide_age">연령대를 선택해주세요</string>
    <string name="guide_interest">관심사를 선택해주세요</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="teenager">10대 이하</string>
    <string name="twenties">20대</string>
    <string name="thirties">30대</string>
    <string name="fourties">40대</string>
    <string name="fifties">50대 이상</string>

    <string name="step1">STEP1</string>
    <string name="step2">STEP2</string>
    <string name="step3">STEP3</string>
    <string name="next_step">다음 단계로 →</string>

    <string name="search">검색</string>
    <string name="genre">카테고리별 조회</string>
    <string name="recent">최근</string>
    <string name="mypage">내 정보</string>

    <string name="login_type">로그인 방식</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="password">비밀번호</string>
    <string name="edit">수정</string>
    <string name="logout">로그아웃</string>

    <string name="picked_gender">선택한 성별</string>
    <string name="picked_age">선택한 연령대</string>
    <string name="picked_interest">선택한 관심사</string>
    <string name="editComplete">수정 완료</string>
    <string name="MyInfo">내정보</string>
    <string name="Category">카테고리별</string>
    <string name="Search">검색</string>
    <string name="Home">홈</string>
    <string name="Detail">도서 상세</string>
    <string name="link_title">구매링크 : </string>
    <string name="similar_header">유사한 책도 만나보세요</string>
    <string name="AppName">부끄럽</string>
    <string name="login_text">로그인</string>
    <string name="AppNameEng">BookLove</string>
    <string name="id_check">중복\n확인</string>
    <string name="password_text">****</string>
    <string name="search_text">"검색어를 입력해주세요."</string>

    <string name="banner1_header">요즘 이 책</string>
    <string name="prev_pw_text">이전 비밀번호</string>
    <string name="update_pw_text">바꿀 비밀번호</string>
    <string name="recent_bottom_list">최근</string>
    <string name="recent_book_text">최근 본 도서</string>
    <string name="recent_similar_book_text">최근 본 도서와 비슷한 도서</string>


</resources>