<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cafe24surround"
        android:text="@string/step2"
        android:textColor="@color/dark_purple"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/kopubworld_dotum_bold"
        android:text="@string/guide_age"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/teenagerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/teenager"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/twentiesButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/twenties"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/thirtiesButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/thirties"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fourtiesButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/fourties"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fiftiesButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="5dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/fifties"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>