<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/kopubworld_dotum_bold"
        android:text="@string/picked_gender"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/maleButton"
            android:layout_width="144dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/male"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/femaleButton"
            android:layout_width="144dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/light_box_rectangle"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:text="@string/female"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="231dp" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextStepButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dark_box_rectangle"
        android:fontFamily="@font/kopubworld_dotum_medium"
        android:text="@string/editComplete"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>