<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginVertical="15dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/cafe24surround"
            android:gravity="center"
            android:text="@string/mypage"
            android:textColor="#9289C7"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="349dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">


        <TextView
            android:id="@+id/loginType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/kopubworld_dotum_bold"
            android:gravity="center"
            android:text="@string/login_type"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loginTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:gravity="center"
            android:text="@string/login_type"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginType"
            app:layout_constraintStart_toEndOf="@+id/loginType" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kopubworld_dotum_bold"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/loginType"
            app:layout_constraintTop_toBottomOf="@+id/loginType" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/id"
            app:layout_constraintStart_toStartOf="@+id/loginTypeTextView" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kopubworld_dotum_bold"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/id"
            app:layout_constraintTop_toBottomOf="@+id/id" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:gravity="center"
            android:text="****"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/idTextView" />


<!--        <Button-->
<!--            android:id="@+id/passwordUpdateButton"-->
<!--            android:layout_width="57dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:backgroundTint="@color/dark_purple"-->
<!--            android:text="@string/edit"-->
<!--            android:textSize="12sp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/passwordTextView"-->
<!--            app:layout_constraintStart_toEndOf="@+id/passwordTextView"-->
<!--            app:layout_constraintTop_toTopOf="@+id/passwordTextView" />-->

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kopubworld_dotum_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/kopubworld_dotum_medium"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/passwordTextView" />

<!--        <Button-->
<!--            android:id="@+id/nameUpdateButton"-->
<!--            android:layout_width="57dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:backgroundTint="@color/dark_purple"-->
<!--            android:text="@string/edit"-->
<!--            android:textSize="12sp"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/nameTextView"-->
<!--            app:layout_constraintStart_toEndOf="@+id/nameTextView"-->
<!--            app:layout_constraintTop_toTopOf="@+id/nameTextView" />-->

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/dark_purple"
            android:text="@string/logout"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">


    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>